--- a/services/allocator/requirements.txt
+++ b/services/allocator/requirements.txt
@@ -1,2 +1,6 @@
-aws-cdk-lib==2.180.0
-constructs>=10.0.0,<11.0.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+idna==3.10
+paho-mqtt==2.1.0
+requests==2.32.3
+urllib3==2.3.0
